tests/files/flow_controller_tests/should_run/089.cmdr
x = 1;
print coth(x);