tests/files/flow_controller_tests/should_fail/074.cmdr
x = "cat";
print coth(x);